--- a/Indego Analysis with Google Maps APIs.ipynb
+++ b/Indego Analysis with Google Maps APIs.ipynb
@@ -8,7 +8,7 @@
     "<a name=\"top\"></a>\n",
     "# Indego City Bike Trip Data Analysis with Google Maps APIs\n",
     "\n",
-    "Jump to\n",
+    "Jump to (if viewing thru GitHub, jump to links will not work)\n",
     "- [Data load and API initialization](#dataload)\n",
     "- [Add Neighborhood from Google Maps](#addn)\n",
     "- [Station data analysis](#stationdata)\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 407,
    "id": "a1f8f6d3",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 408,
    "id": "6efa815f",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 409,
    "id": "7c9e5e0d",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c774aec0",
+   "id": "6f61360d",
    "metadata": {},
    "source": [
     "<a name=\"#addn\"></a> "
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 410,
    "id": "bcacea11",
    "metadata": {
     "scrolled": true
@@ -219,7 +219,7 @@
        "4        3007             11th & Pine, Kahn Park           4/23/2015  Active"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 410,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 411,
    "id": "23da03da",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,6 @@
        "      <th>Station_Name</th>\n",
        "      <th>Day of Go_live_date</th>\n",
        "      <th>Status</th>\n",
-       "      <th>Neighborhood</th>\n",
        "      <th>Full_Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -281,7 +280,6 @@
        "      <td>Virtual Station</td>\n",
        "      <td>4/23/2015</td>\n",
        "      <td>Active</td>\n",
-       "      <td>Center City</td>\n",
        "      <td>Virtual Station, Philadelphia, PA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -290,7 +288,6 @@
        "      <td>Municipal Services Building Plaza</td>\n",
        "      <td>4/23/2015</td>\n",
        "      <td>Active</td>\n",
-       "      <td>Center City</td>\n",
        "      <td>Municipal Services Building Plaza, Philadelphi...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -302,12 +299,12 @@
        "0        3000                    Virtual Station           4/23/2015  Active   \n",
        "1        3004  Municipal Services Building Plaza           4/23/2015  Active   \n",
        "\n",
-       "  Neighborhood                                          Full_Name  \n",
-       "0  Center City                  Virtual Station, Philadelphia, PA  \n",
-       "1  Center City  Municipal Services Building Plaza, Philadelphi...  "
+       "                                           Full_Name  \n",
+       "0                  Virtual Station, Philadelphia, PA  \n",
+       "1  Municipal Services Building Plaza, Philadelphi...  "
       ]
      },
-     "execution_count": 392,
+     "execution_count": 411,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 419,
    "id": "02030e43",
    "metadata": {
     "scrolled": true
@@ -339,197 +336,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Virtual Station, Philadelphia, PA\n",
-      "Municipal Services Building Plaza, Philadelphia, PA\n",
-      "Welcome Park, NPS, Philadelphia, PA\n",
-      "40th & Spruce, Philadelphia, PA\n",
-      "11th & Pine, Kahn Park, Philadelphia, PA\n",
-      "Temple University Station, Philadelphia, PA\n",
-      "33rd & Market, Philadelphia, PA\n",
-      "15th & Spruce, Philadelphia, PA\n",
-      "38th & Powelton, Philadelphia, PA\n",
-      "21st & Catharine, Philadelphia, PA\n",
-      "6th & Fairmount, Philadelphia, PA\n",
-      "21st & Winter, Franklin Institute, Philadelphia, PA\n",
-      "4th & Walnut, NPS, Philadelphia, PA\n",
-      "11th & Poplar, John F. Street Community Center, Philadelphia, PA\n",
-      "6th & Berks, Philadelphia, PA\n",
-      "12th & Filbert, Philadelphia, PA\n",
-      "6th & Race, Philadelphia, PA\n",
-      "University City Station, Philadelphia, PA\n",
-      "18th & JFK, Philadelphia, PA\n",
-      "Amtrak 30th Street Station, Philadelphia, PA\n",
-      "Rittenhouse Square, Philadelphia, PA\n",
-      "43rd & Chester, Clark Park, Philadelphia, PA\n",
-      "11th & Washington, Philadelphia, PA\n",
-      "2nd & Lombard, Philadelphia, PA\n",
-      "40th Street Station, MFL, Philadelphia, PA\n",
-      "4th & Bainbridge, Philadelphia, PA\n",
-      "36th & Sansom, Philadelphia, PA\n",
-      "Darien & Catharine, Philadelphia, PA\n",
-      "13th & Montgomery, Philadelphia, PA\n",
-      "23rd & South, Philadelphia, PA\n",
-      "10th & Chestnut, Philadelphia, PA\n",
-      "11th & Reed, Philadelphia, PA\n",
-      "Dornsife Center, Philadelphia, PA\n",
-      "2nd & Germantown, Philadelphia, PA\n",
-      "Pennsylvania Convention Center, Philadelphia, PA\n",
-      "The Children's Hospital of Philadelphia (CHOP), Philadelphia, PA\n",
-      "Broad & Girard, Philadelphia, PA\n",
-      "17th & Spring Garden, Philadelphia, PA\n",
-      "Girard Station, MFL, Philadelphia, PA\n",
-      "18th & Fernon, Aquinas Center, Philadelphia, PA\n",
-      "13th & Locust, Philadelphia, PA\n",
-      "2nd & Market, Philadelphia, PA\n",
-      "Independence Mall, NPS, Philadelphia, PA\n",
-      "Broad & Fitzwater, Philadelphia, PA\n",
-      "Foglietta Plaza, Philadelphia, PA\n",
-      "9th & Arch, Philadelphia, PA\n",
-      "23rd & Fairmount, Philadelphia, PA\n",
-      "9th & Locust, Philadelphia, PA\n",
-      "Point Breeze & Tasker, Philadelphia, PA\n",
-      "Rodin Museum, Philadelphia, PA\n",
-      "8th & Market, Philadelphia, PA\n",
-      "Broad & Oxford, Philadelphia, PA\n",
-      "Philadelphia Museum of Art, Philadelphia, PA\n",
-      "20th & Fairmount, Philadelphia, PA\n",
-      "Spring Garden Station, BSL, Philadelphia, PA\n",
-      "Free Library of Philadelphia - Central Library, Philadelphia, PA\n",
-      "23rd & Market, Philadelphia, PA\n",
-      "24th & Sansom, Philadelphia, PA\n",
-      "17th & Pine, Philadelphia, PA\n",
-      "18th & Washington, Chew Playground, Philadelphia, PA\n",
-      "Girard & Hutchinson, Philadelphia, PA\n",
-      "19th & Lombard, Philadelphia, PA\n",
-      "39th & Mt. Vernon, Mantua Haverford Community Center, Philadelphia, PA\n",
-      "Broad & Federal, Philadelphia, PA\n",
-      "4th & Christian, Philadelphia, PA\n",
-      "Spring Garden Station, MFL, Philadelphia, PA\n",
-      "32nd & Baring, Drexel Park, Philadelphia, PA\n",
-      "Front & Carpenter, Philadelphia, PA\n",
-      "9th & Spring Garden, Philadelphia, PA\n",
-      "44th & Walnut, Philadelphia, PA\n",
-      "Fairmount & Ridge, Philadelphia, PA\n",
-      "17th & Girard, Philadelphia, PA\n",
-      "19th & Market, Philadelphia, PA\n",
-      "Broad & Christian, Philadelphia, PA\n",
-      "3rd & Girard, Philadelphia, PA\n",
-      "33rd & Diamond, Philadelphia, PA\n",
-      "29th & Diamond, Philadelphia, PA\n",
-      "29th & Dauphin, Philadelphia, PA\n",
-      "Berks Station, MFL, Philadelphia, PA\n",
-      "10th & Federal, Philadelphia, PA\n",
-      "4th & Washington, Philadelphia, PA\n",
-      "Moyamensing & Tasker, Philadelphia, PA\n",
-      "11th & South, Philadelphia, PA\n",
-      "Pennsylvania & Fairmount Perelman Building, Philadelphia, PA\n",
-      "27th & Master, Athletic Recreation Center, Philadelphia, PA\n",
-      "34th & Mantua, Philadelphia, PA\n",
-      "Penn Treaty Park, Philadelphia, PA\n",
-      "33rd & Dauphin, Philadelphia, PA\n",
-      "33rd & Reservoir, Philadelphia, PA\n",
-      "15th & Market, Philadelphia, PA\n",
-      "Parkside & Girard, Philadelphia, PA\n",
-      "Del. River Trail & Penn St., Philadelphia, PA\n",
-      "Parkside & Belmont, Case Building, Philadelphia, PA\n",
-      "48th & Spruce, Philadelphia, PA\n",
-      "Philadelphia Zoo, Philadelphia, PA\n",
-      "22nd & Federal, Philadelphia, PA\n",
-      "19th & Girard, PTTI, Philadelphia, PA\n",
-      "Barnes Foundation, Philadelphia, PA\n",
-      "ParkWest Town Center, Philadelphia, PA\n",
-      "46th Street Station, MFL, Philadelphia, PA\n",
-      "42nd & Lancaster, Philadelphia, PA\n",
-      "31st & Girard, Philadelphia, PA\n",
-      "27th & Girard, Philadelphia, PA\n",
-      "24th & Cecil B. Moore, Cecil B. Moore Library, Philadelphia, PA\n",
-      "22nd & Cecil B. Moore, Philadelphia, PA\n",
-      "Race Street Pier, Philadelphia, PA\n",
-      "15th & South, Philadelphia, PA\n",
-      "The Children's Hospital of Philadelphia, Osler Circle, Philadelphia, PA\n",
-      "15th & Castle, DiSilvestro Playground, Philadelphia, PA\n",
-      "40th & Baltimore, Trolley Portal, Philadelphia, PA\n",
-      "Thompson & Palmer, Adaire School, Philadelphia, PA\n",
-      "12th & Callowhill, Philadelphia, PA\n",
-      "7th & Fitzwater, Philadelphia, PA\n",
-      "20th & Market, Philadelphia, PA\n",
-      "8th & Mifflin, Bok Building, Philadelphia, PA\n",
-      "Broad & Passyunk, Philadelphia, PA\n",
-      "38th & Spruce, Philadelphia, PA\n",
-      "38th & Market, Philadelphia, PA\n",
-      "30th Street Station East, Philadelphia, PA\n",
-      "27th & South, Philadelphia, PA\n",
-      "25th & Locust, Philadelphia, PA\n",
-      "12th & Passyunk, Philadelphia, PA\n",
-      "24th & Race SRT, Philadelphia, PA\n",
-      "Frankford & Belgrade, Philadelphia, PA\n",
-      "12th & Chestnut, Philadelphia, PA\n",
-      "20th & Sansom, Philadelphia, PA\n",
-      "2nd & Race, Philadelphia, PA\n",
-      "Grays Ferry & Pemberton, Philadelphia, PA\n",
-      "Crescent Park, Philadelphia, PA\n",
-      "17th & Sansom, Philadelphia, PA\n",
-      "15th & Kitty Hawk, Philadelphia, PA\n",
-      "Health Sciences Drive, Philadelphia, PA\n",
-      "11th & Market, Philadelphia, PA\n",
-      "12th & Normandy, Philadelphia, PA\n",
-      "20th & Race, Philadelphia, PA\n",
-      "Broad & Pattison, BSL, Philadelphia, PA\n",
-      "17th & Locust, Philadelphia, PA\n",
-      "2nd & Fairmount, Philadelphia, PA\n",
-      "18th & JFK Curbside, Philadelphia, PA\n",
-      "25th & Diamond, Philadelphia, PA\n",
-      "Broad & Ritner, Philadelphia, PA\n",
-      "Ridge & Master, Philadelphia, PA\n",
-      "16th & Arch, Philadelphia, PA\n",
-      "16th & Chestnut, Philadelphia, PA\n",
-      "18th & Christian, Philadelphia, PA\n",
-      "17th & Green, Philadelphia, PA\n",
-      "17th & JFK, Philadelphia, PA\n",
-      "18th & Chestnut, Philadelphia, PA\n",
-      "34th & Chestnut, Philadelphia, PA\n",
-      "34th & Spruce, Philadelphia, PA\n",
-      "45th & Baltimore, Philadelphia, PA\n",
-      "Broad & Diamond, Philadelphia, PA\n",
-      "Corinthian & Poplar, Philadelphia, PA\n",
-      "Schuylkill Banks Pergola, Philadelphia, PA\n",
-      "Broad & Carpenter, Philadelphia, PA\n",
-      "Broad & Cecil B Moore, Philadelphia, PA\n",
-      "2nd & Norris, Philadelphia, PA\n",
-      "Race & Franklin, Philadelphia, PA\n",
-      "20th & Cuthbert, Philadelphia, PA\n",
-      "16th & Callowhill, Philadelphia, PA\n",
-      "24th & Pennsylvania, Philadelphia, PA\n",
-      "Broad & Oregon, Philadelphia, PA\n",
-      "6th & S Washington Square, Philadelphia, PA\n",
-      "44th & Haverford, Philadelphia, PA\n",
-      "52nd & Larchwood - Malcolm X Park, Philadelphia, PA\n",
-      "8th & Diamond, Philadelphia, PA\n",
-      "Broad & Carpenter, Philadelphia, PA\n",
-      "Broad & Cecil B Moore, Philadelphia, PA\n",
-      "50th & Baltimore, Philadelphia, PA\n",
-      "47th & Aspen - Lucien Blackwell, Philadelphia, PA\n",
-      "24th & Christian, Philadelphia, PA\n",
-      "34th & Arch, Philadelphia, PA\n",
-      "4th & Wood, Philadelphia, PA\n",
-      "29th & Tasker, Philadelphia, PA\n",
-      "30th & Oakford, Philadelphia, PA\n",
-      "27th & Morris - Vare Recreation Center, Philadelphia, PA\n",
-      "16th & Montgomery, Philadelphia, PA\n",
-      "Broad & Chestnut, Philadelphia, PA\n",
-      "23rd & Chestnut, Philadelphia, PA\n"
+      "Neighborhood not found\n"
      ]
     }
    ],
    "source": [
     "for index, row in station_data.iterrows():\n",
-    "    print(station_data.loc[index,\"Full_Name\"])\n",
     "    geocode = gmaps.geocode(station_data.loc[index,\"Full_Name\"])\n",
     "    gr = geocode[0][\"address_components\"]\n",
+    "    found_neighborhood = False\n",
     "    for r in gr:\n",
     "        if \"neighborhood\" in r[\"types\"]:\n",
     "            station_data.loc[index,\"Neighborhood\"] = r[\"long_name\"]\n",
-    "        else"
+    "            found_neighborhood = True\n",
+    "    if found_neighborhood != True:\n",
+    "        print(\"Neighborhood not found\")\n",
+    "        station_data.loc[index,\"Neighborhood\"] = np.NaN"
    ]
   },
   {
@@ -542,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 420,
    "id": "da6713a1",
    "metadata": {},
    "outputs": [
@@ -550,8 +372,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Station_ID  Station_Name Day of Go_live_date  Status Neighborhood                       Full_Name\n",
-      "145        3204  17th & Green          11/14/2019  Active          NaN  17th & Green, Philadelphia, PA\n"
+      "     Station_ID  Station_Name Day of Go_live_date  Status                       Full_Name Neighborhood\n",
+      "145        3204  17th & Green          11/14/2019  Active  17th & Green, Philadelphia, PA          NaN\n"
      ]
     }
    ],
@@ -570,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 421,
    "id": "ed0af61b",
    "metadata": {},
    "outputs": [],
