--- a/Indego Analysis with Google Maps APIs.ipynb
+++ b/Indego Analysis with Google Maps APIs.ipynb
@@ -8,7 +8,19 @@
     "<a name=\"top\"></a>\n",
     "# Indego City Bike Trip Data Analysis with Google Maps APIs\n",
     "\n",
-    "Jump to (if viewing thru GitHub, jump to links will not work)\n",
+    "Indego publishes quarterly data on city bike usage. The following analysis looks at data for Q3 2021\n",
+    "Some questions this analysis will aim to answer\n",
+    "- Which neighborhoods have the highest number of Indego stations?\n",
+    "- Which stations are most / least utilized?\n",
+    "- Are trip distances longer with electric bikes than standard bikes?\n",
+    "- How much revenue was generated from electric bike fees?\n",
+    "\n",
+    "Google Maps APIs will be used to enhance the data set with the following\n",
+    "- Neighborhood information to each bike station\n",
+    "- Distance between stations, following bike routes\n",
+    "\n",
+    "\n",
+    "#### Jump to (if viewing thru GitHub, jump to links will not work)\n",
     "- [Load data and initialize API](#dataload)\n",
     "- [Add Neighborhood from Google Maps](#addn)\n",
     "- [Analyze station data](#stationdata)\n",
@@ -97,7 +109,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the API key from the env file\n",
     "api_key = os.getenv('API_KEY')\n",
+    "\n",
+    "# Initialize google maps API\n",
     "gmaps = googlemaps.Client(key=api_key)"
    ]
   },
@@ -239,6 +254,7 @@
    "id": "b581b0b2",
    "metadata": {},
    "source": [
+    "<br>\n",
     "Add a Full_Name column, that includes the Station_Name + 'Philadelphia, PA' - this will be sent as part of the geocode request"
    ]
   },
@@ -322,14 +338,17 @@
    "id": "8d889025",
    "metadata": {},
    "source": [
+    "<br>\n",
     "Use the Google Maps geocode API to assign a Neighborhood to each station\n",
+    "\n",
     "- For each station, call the API and pass the full station name\n",
-    "- Parse the response to find the neighborhood value and assign it back to the station_data df"
+    "\n",
+    "- Parse the response to find the neighborhood value and assign it back to the station_data df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 595,
    "id": "02030e43",
    "metadata": {
     "scrolled": true
@@ -344,14 +363,23 @@
     }
    ],
    "source": [
+    "# Iterate over each station\n",
     "for index, row in station_data.iterrows():\n",
+    "    # Call the geocode API, for the current station\n",
+    "    # geocode returns a dict with results\n",
     "    geocode = gmaps.geocode(station_data.loc[index,\"Full_Name\"])\n",
+    "    \n",
+    "    # Get address_components list in  result\n",
     "    gr = geocode[0][\"address_components\"]\n",
     "    found_neighborhood = False\n",
+    "    \n",
+    "    # Iterate through address_components, looking for \"neighborhood\"\n",
+    "    # If found, assign the value into the df\n",
     "    for r in gr:\n",
     "        if \"neighborhood\" in r[\"types\"]:\n",
     "            station_data.loc[index,\"Neighborhood\"] = r[\"long_name\"]\n",
     "            found_neighborhood = True\n",
+    "    # If no neighborhood is, assign NaN in the df\n",
     "    if found_neighborhood != True:\n",
     "        print(\"Neighborhood not found\")\n",
     "        station_data.loc[index,\"Neighborhood\"] = np.NaN"
@@ -362,6 +390,7 @@
    "id": "e6a6977e",
    "metadata": {},
    "source": [
+    "<br>\n",
     "Review Neighborhood data for any issues"
    ]
   },
@@ -381,6 +410,7 @@
     }
    ],
    "source": [
+    "# Find rows where Neighborhood == NaN\n",
     "missing_neighorhood = station_data.loc[station_data[\"Neighborhood\"].isna()]\n",
     "print(missing_neighorhood.to_string())"
    ]
@@ -390,6 +420,7 @@
    "id": "1552ad0f",
    "metadata": {},
    "source": [
+    "<br>\n",
     "Assign a value manually for the row with a missing neighborhood"
    ]
   },
@@ -486,7 +517,7 @@
    "id": "e17363fe",
    "metadata": {},
    "source": [
-    "It would be more helpful here to have a visualization of distribution across the city - to be added"
+    "*It would be more helpful here to have a visualization of distribution across the city - to be added*"
    ]
   },
   {
@@ -494,6 +525,7 @@
    "id": "ea8a0986",
    "metadata": {},
    "source": [
+    "<br>\n",
     "Are any stations inactive?"
    ]
   },
@@ -524,6 +556,7 @@
    "id": "268d733e",
    "metadata": {},
    "source": [
+    "<br>\n",
     "Which stations are inactive?"
    ]
   },
@@ -747,7 +780,8 @@
    "id": "f66f2417",
    "metadata": {},
    "source": [
-    "Determine the top ten neighborhoods with active stations"
+    "<br>\n",
+    "Find the top ten neighborhoods with active stations"
    ]
   },
   {
@@ -795,11 +829,12 @@
   {
    "cell_type": "code",
    "execution_count": 585,
-   "id": "97d64615",
+   "id": "fc206e8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trip_data = pd.read_csv(\"indego-trips-2021-q3.csv\", low_memory=False)"
+    "# Run as needed to re-init trip_data from the csv file\n",
+    "#trip_data = pd.read_csv(\"indego-trips-2021-q3.csv\", low_memory=False)"
    ]
   },
   {
@@ -1816,6 +1851,84 @@
     "\n",
     "# Output the station with the lowest number of trips\n",
     "grouped.nsmallest(1, \"sum\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 597,
+   "id": "1551c2cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sum</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>start_name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16th &amp; Chestnut, Philadelphia, PA</th>\n",
+       "      <td>10453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15th &amp; Spruce, Philadelphia, PA</th>\n",
+       "      <td>9871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34th &amp; Spruce, Philadelphia, PA</th>\n",
+       "      <td>9774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17th &amp; Locust, Philadelphia, PA</th>\n",
+       "      <td>9581</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Schuylkill Banks Pergola, Philadelphia, PA</th>\n",
+       "      <td>9571</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              sum\n",
+       "start_name                                       \n",
+       "16th & Chestnut, Philadelphia, PA           10453\n",
+       "15th & Spruce, Philadelphia, PA              9871\n",
+       "34th & Spruce, Philadelphia, PA              9774\n",
+       "17th & Locust, Philadelphia, PA              9581\n",
+       "Schuylkill Banks Pergola, Philadelphia, PA   9571"
+      ]
+     },
+     "execution_count": 597,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped.nlargest(5, \"sum\")"
    ]
   },
   {
