--- a/Indego Analysis with Google Maps APIs.ipynb
+++ b/Indego Analysis with Google Maps APIs.ipynb
@@ -9,6 +9,7 @@
     "# Indego City Bike Trip Data Analysis with Google Maps APIs\n",
     "\n",
     "Indego publishes quarterly data on city bike usage. The following analysis looks at data for Q3 2021\n",
+    "\n",
     "Some questions this analysis will aim to answer\n",
     "- Which neighborhoods have the highest number of Indego stations?\n",
     "- Which stations are most / least utilized?\n",
@@ -20,7 +21,7 @@
     "- Distance between stations, following bike routes\n",
     "\n",
     "\n",
-    "#### Jump to (if viewing thru GitHub, jump to links will not work)\n",
+    "**Jump to** *(if viewing thru GitHub, jump to links will not work)*\n",
     "- [Load data and initialize API](#dataload)\n",
     "- [Add Neighborhood from Google Maps](#addn)\n",
     "- [Analyze station data](#stationdata)\n",
@@ -53,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install if not already\n",
+    "# Install if not already present\n",
     "# pip install -U googlemaps\n",
     "# pip install python-dotenv \n",
     "\n",
@@ -73,7 +74,7 @@
    "id": "d72a356c",
    "metadata": {},
    "source": [
-    "Load data stored env file - this will primary be used to store the Google API key, so the API key itself is not present in this file\n",
+    "Load data stored env file - this will primarily be used to store the Google API key, so the API key itself is not present in this file\n",
     "\n",
     "Load data stored in csv files, that include trip data and basic station data"
    ]
@@ -452,7 +453,9 @@
    "id": "cc64e54e",
    "metadata": {},
    "source": [
-    "Print the top 10 neighborhoods by count of Indego stations"
+    "<br>\n",
+    "\n",
+    "Print a sorted list of neighborhoods by count of Indego stations"
    ]
   },
   {
@@ -829,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 585,
-   "id": "fc206e8d",
+   "id": "e78178aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1223,9 @@
    "cell_type": "code",
    "execution_count": 588,
    "id": "66adcc8b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1595,6 +1600,7 @@
    "id": "be4d31d7",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "Drop trips that include a Virtual location"
    ]
   },
@@ -1624,6 +1630,7 @@
    "id": "8ef2e810",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "Check that original row count - virtual row count = current row count"
    ]
   },
@@ -1653,6 +1660,7 @@
    "id": "a3cd4773",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "Drop trips longer than 3 hours - for this analysis, assume these are a result of user error"
    ]
   },
@@ -1686,6 +1694,7 @@
    "id": "7b7b2d72",
    "metadata": {},
    "source": [
+    "<br><br>\n",
     "Drop round trips that are under 5 minutes - for this analysis, assume these are a result of user error"
    ]
   },
@@ -1728,6 +1737,8 @@
    "id": "ba6c1910",
    "metadata": {},
    "source": [
+    "<br>\n",
+    "\n",
     "**Which neighborhoods are most trips between?**"
    ]
   },
@@ -1779,6 +1790,8 @@
    "id": "57afeb9e",
    "metadata": {},
    "source": [
+    "<br>\n",
+    "\n",
     "**Which station has the fewest trips (start or end at that station)?**"
    ]
   },
@@ -1854,9 +1867,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b09256bf",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "**Which stations have the most trips?**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 597,
-   "id": "1551c2cd",
+   "id": "b5500680",
    "metadata": {},
    "outputs": [
     {
@@ -1936,16 +1959,10 @@
    "id": "707692aa",
    "metadata": {},
    "source": [
+    "**Analysis below to be added**\n",
+    "\n",
     "What percentage of trips use standard bikes vs electric bikes? Do certain stations favor electric bikes?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c4a32b8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1954,14 +1971,6 @@
    "source": [
     "What is the average trip duration for standard bikes vs electric bikes?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4cb4d21b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1979,14 +1988,6 @@
     "How much revenue was generated in electric bike fees?\n",
     "- Trips using an electric bike charge an extra $.15 per minute"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af20e9e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2027,22 +2028,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a34aa54e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "9fddce17",
    "metadata": {},
    "source": [
-    "## <a name=\"adddistancedata\"></a> Add trip distance using Google Maps APIs\n",
-    "[Return to Top](#top)\n",
-    "\n",
-    "Mean, median trip distance?"
+    "## <a name=\"adddistancedata\"></a> To be added - Add trip distance using Google Maps APIs\n",
+    "[Return to Top](#top)"
    ]
   },
   {
@@ -2052,12 +2043,23 @@
    "source": [
     "**For each start station, build a list of end stations that have an existing trip**\n",
     "\n",
-    "**Then, using Google APIs to calculate the distance between these stations**"
+    "**Then, using Google Distance Matrix API to calculate the distance between these stations**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "227e46f7",
+   "metadata": {},
+   "source": [
+    "<br><br>\n",
+    "Select all station (start, end) combinations that include a trip in the data set\n",
+    "\n",
+    "**Out of 31,506 possible combinations, 19,072 have a trip in the data set**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 607,
    "id": "5ae74374",
    "metadata": {},
    "outputs": [
@@ -2082,33 +2084,39 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>start_station</th>\n",
        "      <th>end_station</th>\n",
-       "      <th>0</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>3004</td>\n",
+       "      <td>3004</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>3004</td>\n",
        "      <td>3005</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3004</td>\n",
        "      <td>3006</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3004</td>\n",
        "      <td>3007</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>3004</td>\n",
        "      <td>3008</td>\n",
        "      <td>9</td>\n",
        "    </tr>\n",
@@ -2116,67 +2124,73 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>3243</td>\n",
+       "      <th>19067</th>\n",
+       "      <td>3256</td>\n",
+       "      <td>3212</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>3244</td>\n",
-       "      <td>4</td>\n",
+       "      <th>19068</th>\n",
+       "      <td>3256</td>\n",
+       "      <td>3248</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>3245</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>133</th>\n",
+       "      <th>19069</th>\n",
+       "      <td>3256</td>\n",
        "      <td>3249</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19070</th>\n",
+       "      <td>3256</td>\n",
+       "      <td>3255</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>3255</td>\n",
-       "      <td>4</td>\n",
+       "      <th>19071</th>\n",
+       "      <td>3256</td>\n",
+       "      <td>3256</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>135 rows × 2 columns</p>\n",
+       "<p>19072 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     end_station   0\n",
-       "0           3004  27\n",
-       "1           3005   5\n",
-       "2           3006   3\n",
-       "3           3007   4\n",
-       "4           3008   9\n",
-       "..           ...  ..\n",
-       "130         3243   1\n",
-       "131         3244   4\n",
-       "132         3245   4\n",
-       "133         3249   1\n",
-       "134         3255   4\n",
+       "       start_station  end_station  count\n",
+       "0               3004         3004     27\n",
+       "1               3004         3005      5\n",
+       "2               3004         3006      3\n",
+       "3               3004         3007      4\n",
+       "4               3004         3008      9\n",
+       "...              ...          ...    ...\n",
+       "19067           3256         3212      1\n",
+       "19068           3256         3248      1\n",
+       "19069           3256         3249      2\n",
+       "19070           3256         3255      1\n",
+       "19071           3256         3256     15\n",
        "\n",
-       "[135 rows x 2 columns]"
+       "[19072 rows x 3 columns]"
       ]
      },
-     "execution_count": 509,
+     "execution_count": 607,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ts_data.loc[ts_data['start_station'] == 3004].groupby('end_station').size().reset_index()"
+    "ts_data.groupby([\"start_station\", \"end_station\"]).size().reset_index(name='count')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f00d339f",
+   "id": "70e251b8",
    "metadata": {},
    "outputs": [],
    "source": []
